--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
-    "rootCA": "/Users/rafaxu/certs/legacyca.pem",
-    "privateCert": "/Users/rafaxu/certs/certificate.pem.crt",
-    "certificateKey": "/Users/rafaxu/certs/private.pem.key",
-    "endpoint": "a2a4ziueyywvoe.iot.us-east-1.amazonaws.com",
+    "rootCA": "./rootca.pem",
+    "privateCert": "./cert.pem",
+    "certificateKey": "./key.pem",
+    "endpoint": "[your-end-point]",
     "port": 8883,
     "thingName": "Door"
 }
